# Foundation-Stack-Day-3

./: .gitignore
02_uv_sync/: main.py  pyproject.toml
03_uv_sync_frozen/: Dockerfile  pyproject.toml
03_uv_sync_frozen/app/: main.py
04_ruff/: pyproject.toml
04_ruff/src/: main.py
05_pydantic/: main.py  mission_1.py  mission_2.py  mission_3.py  mission_sol.py  pyproject.toml  test_mission.py  test_mission_2.py
