# ============================================================
# [project] — 프로젝트 기본 정보 (PEP 621 표준)
# Python 패키지 생태계가 이 섹션을 읽어 프로젝트를 식별합니다.
# ============================================================
[project]
name = "foundation-stack-day3"          # 패키지 이름 (pip install 할 때 쓰이는 이름)
version = "0.1.0"                       # 시맨틱 버전: MAJOR.MINOR.PATCH
description = "Foundation Stack Day 3 - uv & ruff 실습"
requires-python = ">=3.11, <3.12"       # Python 3.11.x만 허용 (3.12 미만)

# 프로덕션에서 필요한 핵심 의존성 목록
# uv sync 실행 시 여기 나열된 패키지들이 설치됩니다.
dependencies = [
    "numpy>=2.0.0",                      # 수치 계산 라이브러리
]

# ============================================================
# [dependency-groups] — 개발 전용 의존성 (PEP 735)
# uv sync 시 기본으로 함께 설치되지만,
# --no-dev 옵션을 주면 제외할 수 있습니다.
# ============================================================
[dependency-groups]
dev = [
    "pytest>=9.0.2",                    # 테스트 프레임워크
]
