# ============================================================
# [project] — 프로젝트 기본 정보 (PEP 621 표준)
# Python 패키지 생태계가 이 섹션을 읽어 프로젝트를 식별합니다.
# ============================================================
[project]
name = "frozen-practice"                # 패키지 이름 (pip install 할 때 쓰이는 이름)
version = "0.1.0"                       # 시맨틱 버전: MAJOR.MINOR.PATCH
description = "uv sync --frozen 실습 (FastAPI)"
requires-python = ">=3.11, <3.12"       # Python 3.11.x만 허용 (3.12 미만)

# 프로덕션에서 필요한 핵심 의존성 목록
# uv sync --frozen 실행 시 uv.lock에 고정된 버전 그대로 설치됩니다.
dependencies = [
    "fastapi>=0.115.0",                 # 웹 프레임워크
    "pydantic>=2.11.0",                 # 데이터 검증 (FastAPI가 내부적으로 사용)
    "uvicorn>=0.35.0",                  # ASGI 서버 (FastAPI 실행에 필요)
]

# ============================================================
# [dependency-groups] — 개발 전용 의존성 (PEP 735)
# uv sync 시 기본으로 함께 설치되지만,
# --no-dev 옵션을 주면 제외할 수 있습니다. (예: Dockerfile)
# ============================================================
[dependency-groups]
dev = [
    "pytest>=9.0.2",                    # 테스트 프레임워크
]
