# ============================================================
# [project] — 프로젝트 기본 정보 (PEP 621 표준)
# ============================================================
[project]
name = "ruff-practice"
version = "0.1.0"
description = "Ruff 린터 & 포매터 실습"
requires-python = ">=3.11, <3.12"
dependencies = []

# ============================================================
# [dependency-groups] — 개발 전용 의존성 (PEP 735)
# ruff를 dev 의존성으로 관리합니다.
# uvx ruff check 처럼 임시 실행도 가능하지만,
# 프로젝트에 고정하면 팀 전체가 같은 버전을 사용할 수 있습니다.
# ============================================================
[dependency-groups]
dev = [
    "ruff>=0.15.7",                     # 린터 + 포매터 (Flake8, Black, isort 통합)
]

# ============================================================
# [build-system] — 빌드 백엔드 설정 (PEP 517)
#
# Python 패키지를 배포 가능한 형태(.whl)로 만들려면 빌드 백엔드가 필요합니다.
# 대표적인 빌드 백엔드:
#   - setuptools : 가장 오래된 표준. setup.py / setup.cfg 시절부터 사용.
#   - hatchling  : 빠르고 가볍다. pyproject.toml만으로 설정 완결.
#   - flit       : 단순한 프로젝트에 적합. 최소한의 설정.
#   - maturin    : Rust + Python 혼합 프로젝트용.
#
# requires: 빌드에 필요한 패키지 목록
# build-backend: 빌드를 수행할 모듈 경로
# ============================================================
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ============================================================
# [tool.hatch.build.targets.wheel] — wheel 빌드 시 포함할 파일 설정
#
# wheel(.whl)은 Python의 배포 패키지 형식입니다.
# pip install 할 때 실제로 설치되는 파일이 바로 이 wheel 안에 들어있습니다.
#
# hatchling은 기본적으로 프로젝트 이름과 같은 디렉토리를 찾습니다.
# 예) name = "ruff-practice" → ruff_practice/ 폴더를 찾음
#
# 이 프로젝트는 src/ 레이아웃을 사용합니다:
#   04_ruff/
#   ├── src/                  ← 소스코드를 src/ 안에 격리
#   │   ├── __init__.py
#   │   └── main.py           ← ruff 린팅/포맷팅 실습용 코드
#   └── pyproject.toml
#
# src/ 레이아웃은 프로젝트 이름과 다르므로,
# packages = ["src"]로 명시적으로 알려줘야 합니다.
# 이 설정이 없으면 "Unable to determine which files to ship" 에러가 발생합니다.
# ============================================================
[tool.hatch.build.targets.wheel]
packages = ["src"]

# ============================================================
# [tool.ruff] — Ruff 기본 설정
# Flake8(린터) + Black(포매터) + isort(임포트 정렬)를 하나로 합친 도구입니다.
# 별도의 설정 파일 없이 pyproject.toml에서 모든 설정을 관리합니다.
# ============================================================
[tool.ruff]
target-version = "py311"                # Python 3.11 문법 기준으로 검사
line-length = 100                       # 한 줄 최대 길이 (Black 기본값은 88)

# ============================================================
# [tool.ruff.lint] — 린터 규칙 설정
# select: 활성화할 규칙 그룹
#   E  — pycodestyle 에러 (코드 스타일 위반)
#   F  — pyflakes (미사용 import, 미정의 변수 등 논리적 오류)
#   I  — isort (import 정렬 규칙)
#   W  — pycodestyle 경고
#   UP — pyupgrade (구버전 Python 문법을 최신으로 자동 변환)
#
# ignore: 비활성화할 개별 규칙
#   E501 — 줄 길이 초과. 포매터(ruff format)가 처리하므로 린터에서 무시.
# ============================================================
[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]

# ============================================================
# [tool.ruff.lint.isort] — import 정렬 세부 설정
# known-first-party: 이 프로젝트의 내부 모듈 목록
# → import 정렬 시 표준 라이브러리 / 서드파티 / 자체 모듈을 구분합니다.
#
# 예시) 정렬 전:
#   import pydantic
#   import os
#   from src import utils
#
# 예시) 정렬 후:
#   import os              ← 표준 라이브러리
#
#   import pydantic        ← 서드파티
#
#   from src import utils  ← first-party (자체 모듈)
# ============================================================
[tool.ruff.lint.isort]
known-first-party = ["src"]
